# SkillStake

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  INTERVIEW.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-pages.yml
app/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
app/src/: App.tsx  index.css
app/src/idl/: commitment_stake.json
app/src/lib/: solana.ts
migrations/: deploy.ts
programs/commitment-stake/: Cargo.toml
programs/commitment-stake/src/: errors.rs  instructions.rs  lib.rs  state.rs  transfer.rs
tests/: commitment-stake.ts
