[package]
name = "commitment-stake"
version = "0.1.0"
description = "Commitment staking program built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commitment_stake"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

